# photoshare-api

./: .env  README.md  docker-compose.yml  main.py  photos.py  pyproject.toml  requirements.txt  test.db  test_db.sqlite3
migrations/: env.py
migrations/versions/: 0063a1783f51_update_stories.py  3750502a4779_init.py  689d7003e74c_init.py  779395003853_init.py  bacc6c60cb03_messages.py  c2e5fa06a838_update_m2m_rel.py  ddf12658b573_update_subs.py
src/: constants.py  messages.py  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: chats.py  comments.py  estimates.py  messages.py  photos.py  pytest_comments.py  pytest_estimates.py  pytest_photos.py  pytest_users.py  stories.py  tags.py  (+3 more)
tests/: conftest.py  test_migrations_env.py  test_repository_chats.py  test_repository_comments.py  test_repository_estimates.py  test_repository_messages.py  test_repository_photos.py  test_repository_stories.py  test_repository_stories1.py  test_repository_stories2.py  test_repository_subscriptions.py  test_repository_tags.py  test_repository_users.py  test_route_estimates.py  test_route_stories.py  test_route_subscriptions.py  test_route_tags.py  test_routes_auth.py  test_routes_chats.py  test_routes_comments.py  test_routes_estimates.py  test_routes_messages.py  test_routes_photos.py  test_routes_stories1.py  test_routes_stories2.py  test_routes_subscriptions.py  test_routes_tags.py  test_routes_users.py  test_services_auth.py  test_services_email.py  test_services_messages.py  test_services_photos.py  test_services_role.py  test_services_schemas.py
(+18 files in other folders)
